# mcp

./: Comparision.md  README.md  client_context_aware_response.py  client_raw_response.py  csv_processor.py  csv_raw_response.py  mathserver.py  pyproject.toml  response.md  test.csv  weather.py
