[project]
name = "MCP demo langchain"
version = "0.1"
description = "Basic demonstration of Model-Contet-Protocol (MCP) functionality"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.4.8",
    "mcp>=1.9.4",
]
