[project]
name = "MCPdemolangchain"
version = "0.2"
description = "Demonstration of resources, prompt in  Model-Contet-Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "c>=0.0.1",
    "fastmcp==2.0.0",
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.4.8",
    "mcp[cli]>=1.9.4",
    "pandas>=2.3.0",
]
